# python-opentelemetry-access

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
example_hooks/oidc_auth/: auth_hooks.py
example_tests/: conftest.py  health_check_test.py  test_spans.json
src/api_utils/: exceptions.py  json_api_types.py
src/python_opentelemetry_access/: __init__.py  __main__.py  api.py  base.py  cli.py  otlpjson.py  otlpproto.py  util.py
src/python_opentelemetry_access/api/: __init__.py
src/python_opentelemetry_access/api_utils/: api_utils.py  exceptions.py  json_api_types.py
src/python_opentelemetry_access/base/: __init__.py
src/python_opentelemetry_access/cli/: __init__.py
src/python_opentelemetry_access/opensearch/: ss4o.py
src/python_opentelemetry_access/opensearch/ss4o/: __init__.py
src/python_opentelemetry_access/opensearch_ss4o/: __init__.py
src/python_opentelemetry_access/otlpjson/: __init__.py
src/python_opentelemetry_access/otlpproto/: __init__.py
src/python_opentelemetry_access/proxy/: __init__.py
src/python_opentelemetry_access/proxy/api/: __init__.py
src/python_opentelemetry_access/proxy/opensearch/: __init__.py
src/python_opentelemetry_access/proxy/opensearch/ss4o/: __init__.py
src/python_opentelemetry_access/proxy/rest/: __init__.py
src/python_opentelemetry_access/telemetry_hooks/: __init__.py  utils.py
src/python_opentelemetry_access/util/: __init__.py  json_api_types.py
tests/: test_basic.py  test_examples.py  test_examples_cli.py  test_filtering.py  test_otlp_json.py  test_otlp_proto.py  test_reified.py  test_ss4o_json.py
tests/examples/: README.md  ex1.binpb  ex1.json  ex1_ss4o.json  ex2.binpb  ex2.json  ex2_ss4o.json  flattening.binpb  flattening.json  flattening_ss4o_bare.json
tests/examples/utils/: binary_collector_config.yaml  json_collector_config.yaml
utils/test_generation/: README.md
