[project]
name = "python-opentelemetry-access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tilo Wiklund", email = "tilo.wiklund@sensmetry.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "eoepca-security",
    "fastapi>=0.115.4",
    "opensearch-py[async]>=2.7.1",
    "opentelemetry-betterproto",
    "opentelemetry-container-distro==0.2.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "pandas>=2.2.3",
    "pytest-asyncio>=0.25.3",
    "types-python-dateutil>=2.9.0.20241206",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pandas-stubs>=2.2.3.241009",
    "pytest>=8.3.3",
]

[tool.uv.sources]
opentelemetry-betterproto = { git = "https://github.com/EOEPCA/opentelemetry-betterproto.git", branch = "2.0.0-beta2" }
eoepca-security = { git = "https://github.com/EOEPCA/python-eoepca-security/" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
