[project]
name = "python-opentelemetry-access"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tilo Wiklund", email = "tilo.wiklund@sensmetry.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "eoepca-security>=2.0.0",
    "fastapi>=0.115.4",
    "opensearch-py[async]>=2.7.1",
    "opentelemetry-betterproto>=2.0.0",
    "pandas>=2.2.3",
    "eoepca-api-utils>=2.0.0",
    "plugin-utils>=2.0.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
dev-dependencies = [
    "pandas-stubs>=2.2.3.241009",
    "mypy>=1.15.0",
    "pytest>=6.0",
    "pytest-asyncio>=0.17",
    "pytest-cov>=6.0.0",
    "types-jsonschema>=4.23.0.20240813",
]

[tool.uv.sources]
opentelemetry-betterproto = { git = "https://github.com/EOEPCA/opentelemetry-betterproto.git", branch = "2.0.0" }
eoepca-api-utils = { git = "https://github.com/EOEPCA/resource-health.git", subdirectory = "eoepca-api-utils", branch = "2.0.0"}
plugin-utils = { git = "https://github.com/EOEPCA/resource-health.git", subdirectory = "plugin-utils", branch = "2.0.0" }
eoepca-security = { git = "https://github.com/EOEPCA/python-eoepca-security.git", branch = "2.0.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
# Enable later
# disallow_untyped_defs = true
show_error_context = true
pretty = true
no_implicit_optional = true
warn_unused_ignores = true
# warn_return_any = true
ignore_missing_imports = true
follow_untyped_imports = true
